@startuml

skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0

' =====================
' CARD HIERARCHY
' =====================

abstract class Card <<abstract>> {
  #name: String
  #description: String
  #sectionTypes: List<SectionType>
  #playerColor: PlayerColor
  +Card(name: String, description: String, sectionTypes: List<SectionType>): Card
  +{abstract}play(section: Section)
  +verifySectionType(sectionType: SectionType)
  +{abstract}setColor(playerColor: PlayerColor)
  +haveSectionType(sectionType: SectionType) : boolean
  +haveSameColor(color: PlayerColor) : boolean
  +{abstract}verifyColor(color: PlayerColor)
  +getName(): String
}

class Unit {
  -basePoints: int
  -currentPoints: int
  -modifiers: List<Modifier>
  -hasHeroModifier : boolean
  +Unit(name: String, description: String, points: int, sectionTypes: List<SectionType>,
  modifiers: List<Modifier>): Unit
  +Unit(name: String, description: String, points: int, sectionType: SectionType,
  modifiers: List<Modifier>): Unit
  +verifyColor(color: PlayerColor)
  +setColor(playerColor: PlayerColor)
  +play(section: Section)
  +checkHeroModifier()
  +hasHeroAsModifier() : boolean
  +calculatePoints(): int
  +resetPoints()
  +setPoints(points: int)
  +haveModifier(modifier: Modifier): boolean
  +strongerThan(unit : Unit) : Unit
  +samePointsAs(unit : Unit) : boolean
}

abstract class Special <<abstract>> {
  +Special(name: String, description: String, sectionTypes: List<SectionType>): Special
  +verifyColor(color: PlayerColor)
  +setColor(playerColor: PlayerColor)
}

' =====================
' RELATIONSHIPS
' =====================

Card <|-- Unit
Card <|-- Special

@enduml